fix: emoji picker position on mobile

--- a/src/Pages/Chat/Dialog/Dialog.scss
+++ b/src/Pages/Chat/Dialog/Dialog.scss
@@ -143,6 +143,6 @@
     min-width: calc(100% - 60px);
   }
   .emoji-mart {
-    left: 15%;
+    left: 10px;
   }
 }
